--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "license": "GNU v2",
   "scripts": {
-    "main": "src/main.tsx"
+    "main": "src/main.tsx",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "pretty": "prettier --write .",
